    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)
    
  IMPROVEMENTS
  
    HAMA-41: Add some tests (edwardyoon)
    HAMA-38: Remove AbstractBase and make a new NumericUtil (edwardyoon)
    HAMA-20: Adding license header to a whole code base
    HAMA-31: Refactor VectorWritable (edwardyoon)
    HAMA-29: Replace Matrix(Conf, Text) to Matrix(Conf, String) (edwardyoon)
    HAMA-27: Replace table.get(Text, Text) 
               to table.get(String, String) (edwardyoon)
    HAMA-12: Matrix interface re-arrangement (edwardyoon)
    HAMA-21: Implement get(int index) method (edwardyoon)
    HAMA-19: Remove vector-norms enum to interface 
               from implementation (edwardyoon)
    HAMA-17: Vector to Writable conversion (edwardyoon)
    HAMA-15: Logo Alignment (edwardyoon) 
    HAMA-10: Refactor the mapred package 
             for the latest version of dependencies (edwardyoon)  
    HAMA-9: Upgrade dependencies (edwardyoon)

  BUG FIXES

    HAMA-26: hama-formatter.xml should be removed (edwardyoon)  
    HAMA-25: Vector.get() returns double (edwardyoon)

----
Google Code Trunk 

  NEW FEATURES
  
    Issue-22: Hama project web-site (Edward J. Yoon)
    Issue-21: Add feature vector (Edward J. Yoon)
    Issue-13: Add setDimension() method to reduce function (Edward J. Yoon) 
    Issue-7: Meta-column to store the matrix-info (Chanwit via Edward J. Yoon)
    Issue-1: Hama Initial Code (Edward J. Yoon)

  IMPROVEMENTS
  
    Issue-23: add FindBugs Ant task to build script (Minslovely)
    Issue-17: Logigng full stack (Minslovely)
    Issue-4: Remove Groovy inteface to sandbox (Edward J. Yoon)
    Issue-3: Code Formatter (Edward J. Yoon) 