@@ -1,0 +1,45 @@
+<?xml version="1.0"?>
+<!--
+  Copyright 2002-2004 The Apache Software Foundation
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+
+<!DOCTYPE document PUBLIC "-//APACHE//DTD Documentation V2.0//EN" 
+"http://forrest.apache.org/dtd/document-v20.dtd">
+
+<document>
+  
+  <header>
+    <title>IRC Channel</title>
+  </header>
+  
+  <body>
+    <section>
+    <title>IRC Channel</title>
+    <p>
+    There is an IRC channel dedicated to Hama at irc.freenode.org. 
+    The name of the channel is #hama. 
+    <br /><br />
+    The IRC channel can be used for online discussion about hama related stuff, 
+    but developers should be careful to transfer all the official decisions 
+    or useful discussions to the <a href="./issue_tracking.html">issue tracking 
+    </a>system. 
+    </p>
+    <ul>
+      <li><a href="http://www.xchat.org/">XChat: Multiplatform Chat Program</a>
+      </li>
+    </ul>
+  </section>
+  </body>
+</document>
