@@ -44,9 +44,10 @@ See http://forrest.apache.org/docs/linking.html for more info.
   </docs>
 
   <docs label="Resources">
-    <developers label="Developers" href="developers.html" />
-    <issues label="Issue Tracking" href="issue_tracking.html" />
-    <lists     label="Mailing Lists"      href="mailing_lists.html" />
+    <developers label="Developers"     href="developers.html" />
+    <issues     label="Issue Tracking" href="issue_tracking.html" />
+    <lists      label="Mailing Lists"  href="mailing_lists.html" />
+    <irc        label="IRC channel"    href="irc_channel.html" />
   </docs>
 
   <external-refs>
